<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".security.login.LoginFragment">


    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginTextEdit"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/prompt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText"
        tools:text="Login" />

    <EditText
        android:id="@+id/passwordTextEdit"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextEdit"
        tools:text="Password" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:layout_marginTop="54dp"
        android:text="@string/action_sign_in_short"
        app:cornerRadius="50dp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextEdit" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton">

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sign_up_text"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"
            tools:layout_editor_absoluteX="85dp" />

        <TextView
            android:id="@+id/passwordRestoreText"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:text="@string/password_restore_text"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"
            tools:layout_editor_absoluteX="229dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>