<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:context=".security.registration.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/registrationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/security_labels_margin_top"
            android:text="@string/registration_title"
            android:textColor="@color/teal_200"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationLoginTextInputLayout"
            android:layout_width="@dimen/input_default_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationLoginTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Login" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationEmailTextInputLayout"
            android:layout_width="@dimen/input_default_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationLoginTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationEmailTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationPasswordTextInputLayout"
            android:layout_width="@dimen/input_default_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationEmailTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationPasswordTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationPasswordConfirmationTextInputLayout"
            android:layout_width="@dimen/input_default_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationPasswordTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationPasswordConfirmationTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password confirmation" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationNameTextInputLayout"
            android:layout_width="@dimen/input_default_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationPasswordConfirmationTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationNameTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationBirthDateTextInputLayout"
            android:layout_width="@dimen/input_default_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationBirthDateTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="Birthdate"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/registrationGenderRadioGroup"
            android:layout_width="@dimen/input_default_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:checkedButton="@+id/registrationMaleRadioButton"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationBirthDateTextInputLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="Gender"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/registrationMaleRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/genderMaleRadioButtonText" />

            <RadioButton
                android:id="@+id/registrationFemaleRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/genderFemaleRadioButtonText" />
        </RadioGroup>

        <Button
            android:id="@+id/registrationSignUpButton"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/signUpButtonText"
            app:cornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationGenderRadioGroup" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
